[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/InventoryBar.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/coal_ore.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/emerald_ore.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/gold_ore.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/iron_ore.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/lapis_ore.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles/redstone_ore.png" type="Texture" id=7]
[ext_resource path="res://assets/tiles/stone.png" type="Texture" id=8]

[node name="InventoryBar" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 16.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 1.0
margin_right = 88.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "25"

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 92.0
margin_right = 108.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 112.0
margin_top = 1.0
margin_right = 180.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "25"

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 184.0
margin_right = 200.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="Label3" type="Label" parent="."]
margin_left = 204.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "25"

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 276.0
margin_right = 292.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="Label4" type="Label" parent="."]
margin_left = 296.0
margin_top = 1.0
margin_right = 364.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "25"

[node name="TextureRect5" type="TextureRect" parent="."]
margin_left = 368.0
margin_right = 384.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="Label5" type="Label" parent="."]
margin_left = 388.0
margin_top = 1.0
margin_right = 456.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "25"

[node name="TextureRect6" type="TextureRect" parent="."]
margin_left = 460.0
margin_right = 476.0
margin_bottom = 16.0
texture = ExtResource( 7 )

[node name="Label6" type="Label" parent="."]
margin_left = 480.0
margin_top = 1.0
margin_right = 548.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "25"

[node name="TextureRect7" type="TextureRect" parent="."]
margin_left = 552.0
margin_right = 568.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="Label7" type="Label" parent="."]
margin_left = 572.0
margin_top = 1.0
margin_right = 640.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "25"
